booking impl debugged
