# pkg/parking.pb.gw.go
@@ -101,6 +101,39 @@ func local_request_ParkingAPI_ListParkingLots_0(ctx context.Context, marshaler r
 	return msg, metadata, err
 }
 
+var filter_ParkingAPI_GetParkingLotsByUserID_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+
+func request_ParkingAPI_GetParkingLotsByUserID_0(ctx context.Context, marshaler runtime.Marshaler, client ParkingAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq GetParkingLotsByUserIDRequest
+		metadata runtime.ServerMetadata
+	)
+	io.Copy(io.Discard, req.Body)
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_ParkingAPI_GetParkingLotsByUserID_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := client.GetParkingLotsByUserID(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_ParkingAPI_GetParkingLotsByUserID_0(ctx context.Context, marshaler runtime.Marshaler, server ParkingAPIServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq GetParkingLotsByUserIDRequest
+		metadata runtime.ServerMetadata
+	)
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_ParkingAPI_GetParkingLotsByUserID_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.GetParkingLotsByUserID(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 var filter_ParkingAPI_AddParkingBooking_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
 
 func request_ParkingAPI_AddParkingBooking_0(ctx context.Context, marshaler runtime.Marshaler, client ParkingAPIClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
@@ -345,6 +378,26 @@ func RegisterParkingAPIHandlerServer(ctx context.Context, mux *runtime.ServeMux,
 		}
 		forward_ParkingAPI_ListParkingLots_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodGet, pattern_ParkingAPI_GetParkingLotsByUserID_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/api.ParkingAPI/GetParkingLotsByUserID", runtime.WithHTTPPathPattern("/parking/get_by_user_id"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_ParkingAPI_GetParkingLotsByUserID_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_ParkingAPI_GetParkingLotsByUserID_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	mux.Handle(http.MethodPost, pattern_ParkingAPI_AddParkingBooking_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -539,6 +592,23 @@ func RegisterParkingAPIHandlerClient(ctx context.Context, mux *runtime.ServeMux,
 		}
 		forward_ParkingAPI_ListParkingLots_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodGet, pattern_ParkingAPI_GetParkingLotsByUserID_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/api.ParkingAPI/GetParkingLotsByUserID", runtime.WithHTTPPathPattern("/parking/get_by_user_id"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_ParkingAPI_GetParkingLotsByUserID_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_ParkingAPI_GetParkingLotsByUserID_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	mux.Handle(http.MethodPost, pattern_ParkingAPI_AddParkingBooking_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -647,6 +717,7 @@ func RegisterParkingAPIHandlerClient(ctx context.Context, mux *runtime.ServeMux,
 var (
 	pattern_ParkingAPI_GetParkingLot_0          = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"parking", "get"}, ""))
 	pattern_ParkingAPI_ListParkingLots_0        = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"parking", "list"}, ""))
+	pattern_ParkingAPI_GetParkingLotsByUserID_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"parking", "get_by_user_id"}, ""))
 	pattern_ParkingAPI_AddParkingBooking_0      = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"booking", "add"}, ""))
 	pattern_ParkingAPI_GetParkingBooking_0      = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"booking", "get"}, ""))
 	pattern_ParkingAPI_GetParkingBookingsList_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"booking", "list"}, ""))
@@ -658,6 +729,7 @@ var (
 var (
 	forward_ParkingAPI_GetParkingLot_0          = runtime.ForwardResponseMessage
 	forward_ParkingAPI_ListParkingLots_0        = runtime.ForwardResponseMessage
+	forward_ParkingAPI_GetParkingLotsByUserID_0 = runtime.ForwardResponseMessage
 	forward_ParkingAPI_AddParkingBooking_0      = runtime.ForwardResponseMessage
 	forward_ParkingAPI_GetParkingBooking_0      = runtime.ForwardResponseMessage
 	forward_ParkingAPI_GetParkingBookingsList_0 = runtime.ForwardResponseMessage
